// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add and remove a label 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 2`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 3`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 4`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 5`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 6`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 7`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add and remove a label 8`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    class="ui active visible item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value="a"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text filtered"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition visible"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`No selected labelsInUse 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="10 scenarios labelled \\"a\\""
        class="item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="undefined scenarios labelled \\"Easy\\""
        class="active item"
        role="option"
      >
        <span
          class="text"
        >
          Easy 
          <span
            class="ui grey small text"
          >
            ()
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="undefined scenarios labelled \\"fun\\""
        class="item"
        role="option"
      >
        <span
          class="text"
        >
          fun 
          <span
            class="ui grey small text"
          >
            ()
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Selected labelsInUse 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    class="ui item search scrolling dropdown"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autocomplete="off"
      class="search"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="divider text"
      role="alert"
    >
      Filter by labels
    </div>
    <i
      aria-hidden="true"
      class="dropdown icon"
    />
    <div
      class="menu transition"
      role="listbox"
    >
      <div
        aria-checked="true"
        aria-label="10 scenarios labelled \\"a\\""
        class="active item"
        count="10"
        role="option"
      >
        <span
          class="text"
        >
          a 
          <span
            class="ui grey small text"
          >
            (10)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="30 scenarios labelled \\"c\\""
        class="item"
        count="30"
        role="option"
      >
        <span
          class="text"
        >
          c 
          <span
            class="ui grey small text"
          >
            (30)
          </span>
        </span>
      </div>
      <div
        aria-checked="false"
        aria-label="20 scenarios labelled \\"b\\""
        class="item"
        count="20"
        role="option"
      >
        <span
          class="text"
        >
          b 
          <span
            class="ui grey small text"
          >
            (20)
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
